add tests for line and branch coverage